# fastmigrate

./: .fastmigrate  .gitignore  .nojekyll  CHANGELOG.md  CLAUDE.md  README.md  adding_migrations.html  adding_migrations.md  core.html  core.html.md  custom_backends.html  enrolling.html  enrolling.md  index.html  log-fastmigrate.md  pyproject.toml  pyrightconfig.json  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: pytest-ci.yml  quarto-publish.yml
data/: database.db
docsrc/: _quarto.yml  adding_migrations.qmd  custom_backends.qmd  enrolling.qmd
fastmigrate/: __init__.py  _modidx.py  cli.py  core.py
fastmigrate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
migrations/: 0001-create-users.sql  0003-add-sample-data.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
tests/: test_cli.py  test_core.py  test_custom_backend.py  test_db_backup.py  test_enroll_db.py  test_failures.py  test_migrations.py  test_selective_migrations.py  test_transactions.py
tests/test_cli/migrations/: 0004-add-tags-table.sh
tests/test_comprehensive/: test_comprehensive.py
tests/test_comprehensive/migrations/: 0001-create-users-table.sql  0002-add-password-field.sql  0003-add-posts-table.py  0004-create-comments.sh  0005-bad-sql-migration.sql  0006-bad-python-migration.py  0007-bad-shell-migration.sh
tests/test_failures/migrations/: 0003-python-failure.py
tests/test_migrations/migrations/: 0002-add-posts-table.sql
tests/test_selective_migrations/migrations/: 0003-third.sql
testsuites/testsuite_failure/migrations/: 0001-initial-setup.sql  (+2 more)
(+4 files in other folders)
